--- a/homework7/Task1.html
+++ b/homework7/Task1.html
@@ -68,7 +68,7 @@
     </select>
                         
     <select name="cities" id="cities"></select>
-    <p></p>
+    <p class="name"></p>
     
 
     <script src="homework7.js"></script>
